[package]
name = "viontin-gem-tailwind"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "[EXPERIMENTAL] TailwindCSS gem for Viontin — build-time CSS generation"

[dependencies]
viontin-gems = { path = "../gems" }
tailwind-rs-core = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob = "0.3"
