[package]
name = "viontin-gem-inertia"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "[EXPERIMENTAL] InertiaJS-compatible server adapter for Viontin"

[dependencies]
viontin-framework = { path = "../../../framework/crates/framework" }
viontin-gems = { path = "../viontin-gems" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
