[package]
name = "viontin-gems"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "[EXPERIMENTAL] description = "Core gem types, registry, and plugin loader for Viontin""

[dependencies]
viontin-framework = { path = "../../../framework/crates/framework" }
serde = { version = "1", features = ["derive"], optional = true }
linkme = "0.3"
